-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 21, 22, 23
-
Component/s: hotspot
-
b08
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8340481 | 21.0.6-oracle | Yagmur Eren | P4 | Resolved | Fixed | b01 |
| JDK-8340607 | 21.0.6 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8371862 | 17.0.18 | Paul Hohensee | P4 | Resolved | Fixed | b03 |
| JDK-8374207 | 11.0.31 | Sergey Bylokhov | P4 | Resolved | Fixed | b01 |
diff:
diff --git a/src/hotspot/share/utilities/exceptions.cpp b/src/hotspot/share/utilities/exceptions.cpp
index bca6837ee13..a1c5b868481 100644
--- a/src/hotspot/share/utilities/exceptions.cpp
+++ b/src/hotspot/share/utilities/exceptions.cpp
@@ -433,6 +433,7 @@ void Exceptions::wrap_dynamic_exception(bool is_indy, JavaThread* THREAD) {
// Pass through an Error, including BootstrapMethodError, any other form
// of linkage error, or say OutOfMemoryError
if (ls != nullptr) {
+ ResourceMark rm(THREAD);
ls->print_cr("bootstrap method invocation wraps BSME around " PTR_FORMAT, p2i(exception));
exception->print_on(ls);
}
@@ -441,6 +442,7 @@ void Exceptions::wrap_dynamic_exception(bool is_indy, JavaThread* THREAD) {
// Otherwise wrap the exception in a BootstrapMethodError
if (ls != nullptr) {
+ ResourceMark rm(THREAD);
ls->print_cr("%s throws BSME for " PTR_FORMAT, is_indy ? "invokedynamic" : "dynamic constant", p2i(exception));
exception->print_on(ls);
}
- backported by
-
JDK-8340481 Exceptions::wrap_dynamic_exception() doesn't have ResourceMark
-
- Resolved
-
-
JDK-8340607 Exceptions::wrap_dynamic_exception() doesn't have ResourceMark
-
- Resolved
-
-
JDK-8371862 Exceptions::wrap_dynamic_exception() doesn't have ResourceMark
-
- Resolved
-
-
JDK-8374207 Exceptions::wrap_dynamic_exception() doesn't have ResourceMark
-
- Resolved
-
- links to
-
Commit
openjdk/jdk/7d1a4880
-
Commit(master)
openjdk/jdk11u-dev/a04d22fc
-
Commit(master)
openjdk/jdk17u-dev/23ee787c
-
Commit(master)
openjdk/jdk21u-dev/1dd7b657
-
Review
openjdk/jdk/17620
-
Review(master)
openjdk/jdk11u-dev/3116
-
Review(master)
openjdk/jdk17u-dev/4170
-
Review(master)
openjdk/jdk21u-dev/992