8324861: Exceptions::wrap_dynamic_exception() doesn't have ResourceMark

Backport-of: 7d1a48807a482cd19156298ce21d9492f0d912da